--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
+<!DOCTYPE html>
 <html>
+<body style="background-color:powderblue;">
 
-<head>
-</head>
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
 
-<body>
-<p>سلام</p>
 </body>
-
 </html>
