--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body style="background-color:powderblue;">
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<h1>برنامه نویسی بازی با سی پلاس پلاس</h1>
+<p>شروع کار</p>
 
 </body>
 </html>
