change BG to black

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:powderblue;">
+<body style="background-color:black;">
 
 <h1>برنامه نویسی بازی با سی پلاس پلاس</h1>
 <p>شروع کار</p>
