text color to white

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body style="background-color:black;">
 
-<h1>برنامه نویسی بازی با سی پلاس پلاس</h1>
-<p>شروع کار</p>
+<h1 style="color:white">برنامه نویسی بازی با سی پلاس پلاس</h1>
+<p style="color:white">شروع کار</p>
 
 </body>
 </html>
