--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <h1 style="color:white">برنامه نویسی بازی با سی پلاس پلاس</h1>
 <p style="color:white">شروع کار</p>
   
-<iframe src="http://docs.google.com/gview?url=https://drive.google.com/file/d/1eZ2zWsgxtTi9kkclQ2r_h6t_S1wY_rRI/view&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
-
+<object width="400" height="500" type="application/pdf" data="/SDL_Game_Dev_ch4.pdf?#zoom=85&scrollbar=0&toolbar=0&navpanes=0">
+    <p>Insert your error message here, if the PDF cannot be displayed.</p>
+</object>
+  
 </body>
 </html>
