--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 <h1 style="color:white">برنامه نویسی بازی با سی پلاس پلاس</h1>
 <p style="color:white">شروع کار</p>
   
-<object width="400" height="500" type="application/pdf" data="/SDL_Game_Dev_ch4.pdf?#zoom=85&scrollbar=0&toolbar=0&navpanes=0">
-    <p>Insert your error message here, if the PDF cannot be displayed.</p>
-</object>
+<iframe src="http://docs.google.com/gview?url=https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
   
 </body>
 </html>
