--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<iframe src="http://docs.google.com/gview?url=https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
+<!DOCTYPE html>
+<html>
+<body>
+  
+  <iframe src="http://docs.google.com/gview?url=https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf&embedded=true" style="width:1366; height:768px;" frameborder="0"></iframe>
+  
+</body>
+</html>
