--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body style="background-color:powderblue;">
+
+<h1>برنامه نویسی بازی با سی پلاس پلاس</h1>
+<p>شروع به کار.</p>
   
   <iframe src="http://docs.google.com/gview?url=https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf&embedded=true" style="width:1366; height:768px;" frameborder="0"></iframe>
   
