--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body style="background-color:powderblue;">
 
-<h1>برنامه نویسی بازی با سی پلاس پلاس</h1>
-<p>شروع به کار.</p>
+<h1 style="text-align:center;>برنامه نویسی بازی با سی پلاس پلاس</h1>
+<p style="text-align:center;>شروع به کار.</p>
   
   <iframe src="http://docs.google.com/gview?url=https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf&embedded=true" style="width:1366; height:768px;" frameborder="0"></iframe>
   
