--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 <h1 style="text-align:center;">برنامه نویسی بازی با سی پلاس پلاس</h1>
 <p style="text-align:center;">شروع به کار</p>
   
+  <object width="400" height="400" data="https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf"></object>
+  
   <iframe src="http://docs.google.com/gview?url=https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
+  
+  <embed src="https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf" width="1000" height="800" frameborder="0" allowfullscreen>
   
 </body>
 </html>
