--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
   <iframe src="http://docs.google.com/gview?url=https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
   
-  <embed src="https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf" width="1000" height="800" frameborder="0" allowfullscreen>
+  <embed src="https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf" width="1000" height="800" frameborder="0" type="application/pdf" allowfullscreen>
   
 </body>
 </html>
