--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body style="background-color:powderblue;">
+  
 <!--
 <h1 style="text-align:center;">برنامه نویسی بازی با سی پلاس پلاس</h1>
 <p style="text-align:center;">شروع به کار</p>
@@ -8,9 +9,12 @@
   <!--
   <object width="200" height="200" data="https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf"></object>
   -->
-  <iframe src="http://docs.google.com/gview?url=https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf&embedded=true" style="width:600px; height:400px;" frameborder="0"></iframe>
   <!--
-  <embed src="https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf" width="400" height="200" frameborder="0" type="application/pdf">
+  <iframe src="http://docs.google.com/gview?url=https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf&embedded=true" style="width:600px; height:400px;" frameborder="0"></iframe>
   -->
+  
+  <embed src="https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf" width="100%" height="600px" frameborder="0" type="application/pdf">
+  
+  
 </body>
 </html>
