--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Title of the document</title>
+  </head>
+  <body>
+    <h1>PDF Example</h1>
+    <p>Open a PDF file <a href="https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf">example</a>.</p>
+  </body>
+</html>
+
+<!--
+<!DOCTYPE html>
+<html>
 <body style="background-color:powderblue;">
+-->
   
 <!--
 <h1 style="text-align:center;">برنامه نویسی بازی با سی پلاس پلاس</h1>
@@ -12,9 +25,10 @@
   <!--
   <iframe src="http://docs.google.com/gview?url=https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf&embedded=true" style="width:600px; height:400px;" frameborder="0"></iframe>
   -->
-  
+  <!--
   <embed src="https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf" width="100%" height="600px" frameborder="0" type="application/pdf">
   
   
 </body>
 </html>
+-->
