add persian text and center it

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Title of the document</title>
   </head>
   <body>
-    <h1>PDF Example</h1>
-    <p>Open a PDF file <a href="https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf">example</a>.</p>
+    <h1 style="text-align:center;">برنامه نویسی بازی با سی پلاس پلاس</h1>
+    <p style="text-align:center;">فصل چهارم <a href="https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf">دانلود</a>.</p>
   </body>
 </html>
 
