--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1 style="text-align:center;">برنامه نویسی بازی با سی پلاس پلاس</h1>
-    <p style="text-align:center;">فصل چهارم <a href="https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf">دانلود</a>.</p>
+    <p style="text-align:center;"><a href="https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf">دانلود فصل چهارم</a></p>
   </body>
 </html>
 
