add background color

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Title of the document</title>
   </head>
-  <body>
+  <body style="background-color:powderblue;">
     <h1 style="text-align:center;">برنامه نویسی بازی با سی پلاس پلاس</h1>
     <p style="text-align:center;"><a href="https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf">دانلود فصل چهارم</a></p>
   </body>
