--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title of the document</title>
+    <title>SDL Game Dev book(fa)</title>
   </head>
-  <body style="background-color:powderblue;">
+  <body style="background-color:gray;">
     <h1 style="text-align:center;">برنامه نویسی بازی با سی پلاس پلاس</h1>
     <p style="text-align:center;"><a href="https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf">دانلود فصل چهارم</a></p>
   </body>
