--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body style="background-color:gray;">
     <h1 style="text-align:center;">برنامه نویسی بازی با سی پلاس پلاس</h1>
     <p style="text-align:center;"><a href="https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf">دانلود فصل چهارم</a></p>
+    <iframe src="https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf" width="100%" height="500px">
   </body>
 </html>
 
