--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1 style="text-align:center;">برنامه نویسی بازی با سی پلاس پلاس</h1>
     <p style="text-align:center;"><a href="https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf">دانلود فصل چهارم</a></p>
     -->
-    <iframe src="SDL_Game_Dev_ch4.pdf" width="100%" height="100%">
+    <iframe src="SDL_Game_Dev_ch4.pdf" width="100%" height="600px">
   </body>
 </html>
 
