--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>SDL Game Dev book(fa)</title>
+    <meta name="keywords" content="برنامه نویسی,سی پلاس پلاس,بازی,c++">
+    <meta name="description" content="برنامه نویسی بازی با سی پلاس پلاس">
+    <meta http-equiv="Content-Language"  content="Fa">
   </head>
   <body style="background-color:gray;">
     <!--
