--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta http-equiv="Content-Language"  content="Fa">
   </head>
   <body style="background-color:gray;">
+    
+    <p> <a href="/Coin_Cash_WebExport/Coin_Dash.html">Play Coin Cash Game</a> </p>
+    
     <!--
     <h1 style="text-align:center;">برنامه نویسی بازی با سی پلاس پلاس</h1>
     <p style="text-align:center;"><a href="https://github.com/alirezakh74/alirezakh74.github.io/blob/main/SDL_Game_Dev_ch4.pdf">دانلود فصل چهارم</a></p>
