--- a/Coin_Cash_WebExport/Coin_Dash.html
+++ b/Coin_Cash_WebExport/Coin_Dash.html
@@ -4,7 +4,7 @@
 	<meta charset='utf-8' />
 	<meta name='viewport' content='width=device-width, user-scalable=no' />
 	<link id='-gd-engine-icon' rel='icon' type='image/png' href='favicon.png' />
-	<title>Coin_Dash</title>
+	<title>coin_dash</title>
 	<style type='text/css'>
 
 		body {
@@ -137,7 +137,7 @@
 	<script type='text/javascript' src='Coin_Dash.js'></script>
 	<script type='text/javascript'>//<![CDATA[
 
-		const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"Coin_Dash","experimentalVK":false,"fileSizes":{"Coin_Dash.pck":713136,"Coin_Dash.wasm":18131449},"gdnativeLibs":[]};
+		const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"Coin_Dash","experimentalVK":false,"fileSizes":{"Coin_Dash.pck":692032,"Coin_Dash.wasm":18131449},"gdnativeLibs":[]};
 		var engine = new Engine(GODOT_CONFIG);
 
 		(function() {
